fixed spacing for page title

--- a/app/public/stylesheets/general-page-styles.css
+++ b/app/public/stylesheets/general-page-styles.css
@@ -11,7 +11,7 @@
   .page__content {
     padding: 2em;
     background-color: var(--color-white);
-    padding-top: 1em;
+    padding-top: 0;
   }
   .page__name {
     text-align: center;
